# hel2-back

./: .gitignore  Cargo.toml  config.toml
migrations/2018-03-30-090645_initial_setup/: down.sql  up.sql
migrations/2018-04-06-181618_binary_pass/: down.sql  up.sql
migrations/2018-04-07-063245_stats_likes/: down.sql  up.sql
src/: app.rs  config.rs  db.rs  error.rs  main.rs  models.rs  schema.rs
src/db/: messages.rs  mod.rs  models.rs  schema.rs
src/resources/: error.rs  mod.rs
