[package]
name = "hel2-back"
version = "0.1.0"
authors = ["LeshaInc <includeurl@gmail.com>"]

[dependencies]
diesel = { version = "1.1", features = ["postgres"] }
error-chain = "0.11"
env_logger = "0.5"

futures = "0.1"
actix = "0.5"
actix-web = "0.4"

serde = "1.0"
toml = "0.4"
serde_json = "1.0"
serde_derive = "1.0"
