[package]
name = "hel2-back"
version = "0.1.0"
authors = ["LeshaInc <includeurl@gmail.com>"]

[dependencies]
diesel = { version = "1.2", features = ["postgres", "chrono"] }
failure = "0.1"
failure_derive = "0.1"
env_logger = "0.5"
chrono = "0.4"

futures = "0.1"
actix = "0.5"
actix-web = "0.5"

serde = "1.0"
toml = "0.4"
serde_json = "1.0"
serde_derive = "1.0"
